# wpgen

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CUSTOMIZER_FIX_DOCUMENTATION.md  DEPLOYMENT.md  FIXES_APPLIED.md  GITGUARDIAN_FIX_SUMMARY.md  GUI_FEATURES.md  HARDENING_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  ISSUES_FOUND.md  LICENSE  MANIFEST.in  MODULAR_REFACTORING_COMPLETE.md  PRODUCTION_READINESS_FIXES.md  PR_DESCRIPTION.md  README.md  REFACTORING_SUMMARY.md  STRUCTURAL_IMPROVEMENTS.md  THEME_RENDERING_FIXES.md  WPGEN_QA_AUDIT_FIXED_EXAMPLES.md  WPGEN_QA_AUDIT_REPORT.md  codecov.yml  config.yaml  create_minimal_theme.py  diagnose_theme.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.py  test_bareword_sanitizer.py  test_theme_generation.py  test_validation_simple.py  theme_test.php  wordpress_diagnostic.php
.github/workflows/: ci.yml  deploy.yml
examples/: README.md
scripts/: check_flask_cors_version.py  php_lint_generated.py  smoke_generate_and_scan.py
tests/: config.test.yaml  conftest.py  test__debug_provider.py  test_block_categories.py  test_cli_smoke.py  test_code_validator.py  test_config_schema.py  test_cors_regex_specificity.py  test_e2e_mocked.py  test_fallback_templates.py  test_footer_backslash_fix.py  test_functions_enqueue_rules.py  test_generated_front_page_loop.py  test_generated_no_wp_debug_redefine.py  test_generated_php_safety.py  test_generated_php_sanity.py  test_generated_preview_safety.py  test_generated_theme_structure.py  test_github_integration.py  test_github_push_security.py  test_import_side_effects.py  test_logger_redaction.py  test_model_deprecation.py  test_no_mixed_content.py  test_renderer_screenshot_placeholder.py  test_service_e2e.py  test_template_richness_fallback.py  test_theme_prompts.py  test_theme_validator.py  test_validators_strict.py  test_wordpress_loop.py
web/: __init__.py  app.py
web/templates/: index.html
wpgen/: __init__.py  __main__.py  config_schema.py  design_inspiration.py  design_profiles.py  fallback_templates.py  main.py  service.py  types.py
wpgen/blueprints/: __init__.py  blog_blueprint.py  ecommerce_blueprint.py  magazine_blueprint.py  portfolio_blueprint.py
wpgen/core/: README.md  fallback_templates_safe.py  llm_prompts.py  packager.py  sanitizers.py  structure_builder.py  template_contracts.py  template_inserter.py  validator.py
wpgen/generators/: __init__.py  hybrid_generator.py  wordpress_generator.py
wpgen/github/: __init__.py  credentials.py  integration.py
wpgen/gui/: __init__.py  gradio_interface.py
wpgen/llm/: __init__.py  anthropic_provider.py  base.py  composite_provider.py  factory.py  mock_provider.py  openai_provider.py
wpgen/optimizer/: __init__.py  prompt_optimizer.py
wpgen/parsers/: __init__.py  prompt_parser.py
wpgen/patterns/: __init__.py
wpgen/prompts/: __init__.py  theme_prompts.py
wpgen/schema/: __init__.py  theme_schema.py
wpgen/templates/: __init__.py  renderer.py
wpgen/templates/js/: navigation.js.j2  theme.js.j2
wpgen/templates/php/: 404.php.j2  archive.php.j2  comments.php.j2  footer.php.j2  front-page.php.j2  functions.php.j2  header.php.j2  index.php.j2  page.php.j2  search.php.j2  sidebar.php.j2  single.php.j2  style.css.j2
wpgen/templates/php/fallback/: 404.php.j2  archive.php.j2  footer.php.j2  front-page.php.j2  header.php.j2  index.php.j2  page.php.j2  search.php.j2  single.php.j2
wpgen/utils/: __init__.py  code_validator.py  config.py  dependency_checks.py  file_handler.py  filename_sanitizer.py  http_errors.py  image_analysis.py  logger.py  model_deprecation.py  php_validation.py  template_hierarchy_validator.py  text_utils.py  theme_constants.py  theme_self_test.py  theme_validator.py  validation_report.py
wpgen/wordpress/: __init__.py  wordpress_api.py  wordpress_manager.py
