[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "wpgen"
version = "1.0.0"
description = "AI-powered WordPress theme generator with multi-modal support and LLM-based site management"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "WPGen Contributors"},
]
keywords = [
    "wordpress",
    "theme",
    "generator",
    "ai",
    "llm",
    "openai",
    "anthropic",
    "claude",
    "gpt-4",
    "multi-modal",
    "vision",
    "rest-api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "Flask==3.0.0",
    "Werkzeug==3.0.1",
    "openai==1.12.0",
    "anthropic==0.18.1",
    "GitPython==3.1.41",
    "PyYAML==6.0.1",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "python-json-logger==2.0.7",
    "python-dateutil==2.8.2",
    "typing-extensions==4.9.0",
    "gradio==4.16.0",
    "PyPDF2==3.0.1",
    "Pillow==10.2.0",
    "pytesseract==0.3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/wpgen"
"Bug Reports" = "https://github.com/yourusername/wpgen/issues"
"Source" = "https://github.com/yourusername/wpgen"

[project.scripts]
wpgen = "main:main"

[tool.setuptools]
packages = ["wpgen"]
py-modules = ["main"]
include-package-data = true

[tool.setuptools.package-data]
wpgen = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=wpgen --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
