[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wpgen"
version = "1.0.0"
description = "AI-powered WordPress theme generator with multi-modal support and LLM-based site management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "WPGen Contributors"},
]
keywords = [
    "wordpress",
    "theme",
    "generator",
    "ai",
    "llm",
    "openai",
    "anthropic",
    "claude",
    "gpt-4",
    "multi-modal",
    "vision",
    "rest-api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "openai>=1.12.0",
    "anthropic>=0.18.1",
    "PyYAML==6.0.1",
    "python-dotenv==1.0.1",
    "click==8.1.7",
    "colorama==0.4.6",
    "python-json-logger==2.0.7",
    "python-dateutil==2.8.2",
    "typing-extensions>=4.9.0",
    "pydantic>=2.0,<3",
    "tenacity>=8.0,<9",
    "PyPDF2==3.0.1",
    "Pillow>=10.0,<12",
    "pytesseract==0.3.10",
    "GitPython>=3.1.41",
]

[project.optional-dependencies]
ui = [
    "Flask>=3.0.0",
    "Werkzeug>=3.0.6",
    "gradio>=4.44,<5",
    "huggingface_hub<0.26",
]
wp = [
    "requests>=2.32.4",
]
git = [
    "GitPython>=3.1.41",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "freezegun>=1.0.0",
    "coverage[toml]>=7.0.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/wpgen"
"Bug Reports" = "https://github.com/yourusername/wpgen/issues"
"Source" = "https://github.com/yourusername/wpgen"

[project.scripts]
wpgen = "wpgen.main:main"

[tool.setuptools]
packages = ["wpgen"]
include-package-data = true

[tool.setuptools.package-data]
wpgen = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    "output/",
    "logs/",
    "web/static/",
    "**/__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811"]
